# Terminal-RAG-Builder

./: .env.example  .gitignore  README.md  docker-compose.yml  extract.py  main.py  pyproject.toml
src/rag/: __init__.py  chunking.py  cli.py  config.py  db.py  embed.py  evaluate.py  generate.py  golden_gen.py  golden_gen_diy.py  ingest.py  metrics.py  models.py  pdf.py  ragas_golden_setup.py  rerank.py  retrieve.py  sample_pdfs.py
