[project]
name = "terminal-rag-builder"
version = "0.1.0"
description = "Terminal-friendly RAG over arXiv PDFs with hybrid pgvector + RRF retrieval."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3.6",
    "sentence-transformers>=3.0",
    "pymupdf>=1.24",
    "unstructured[pdf]>=0.15",
    "numpy>=1.26",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "prompt_toolkit>=3.0",
    "rich>=13.7",
    "tqdm>=4.66",
    "tiktoken>=0.7",
    "ragas>=0.2.10,<0.3",
    "rapidfuzz>=3.0",
    "datasets>=2.20,<4.0",
    "langchain>=0.3,<1.0",
    "langchain-openai>=0.2,<1.0",
    "langchain-huggingface>=0.1,<1.0",
    "langchain-community>=0.3,<0.4",
    "langchain-ollama>=0.2,<1.0",
]

[project.scripts]
rag = "rag.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
